src/styles/lx-date-pickers.css
/* ... */
.lx .lx-layout .lx-calendar-container .lx-calendar-regular-layout-month-label,
.lx .lx-layout .lx-calendar-container .lx-calendar-month-layout-year-label {
  color: var(--color-label);
  line-height: 1em;
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin-top: var(--space-1250);
  font-size: var(--small-font-size);
}

.lx .lx-layout .lx-calendar-container .lx-calendar-month-layout-year-label {
  margin-bottom: var(--space-0500);
}

.lx .lx-layout .lx-calendar-container .lx-calendar-regular-layout {
  display: flex;
  gap: var(--space-3000);
}

.lx .lx-layout .lx-calendar-container .lx-calendar-weekdays {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: var(--space-0750);
  margin-bottom: var(--space-0250);
}

.lx .lx-layout .lx-calendar-container
  .lx-calendar-main
  .lx-calendar-layouts-wrapper
  .lx-button:not(:disabled)
  svg {
  fill: var(--color-data);
}

.lx .lx-layout .lx-calendar-container
  .lx-calendar-main
  .lx-calendar-layouts-wrapper
  .lx-button:disabled
  svg,
.lx .lx-layout .lx-calendar-container
  .lx-mobile-time-selection-button-wrapper
  .lx-button:disabled
  svg {
  fill: var(--color-disabled-foreground);
}

.lx .lx-layout .lx-calendar-container .lx-calendar-weekday {
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  font-size: var(--small-font-size);
  color: var(--color-label);
  line-height: 1em;
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
  height: 1.6rem;
  width: 2.2rem; /* Same as lx-calendar-day-wrapper width */
  font-weight: 500;
}

.lx .lx-layout .lx-calendar-container .lx-calendar-months-wrapper,
.lx .lx-layout .lx-calendar-container .lx-calendar-years-wrapper,
.lx .lx-layout .lx-calendar-container .lx-calendar-quarters-wrapper {
  position: relative;
  overflow: hidden;
  height: auto;
}

.lx .lx-layout .lx-calendar-container .lx-calendar-weeks,
.lx .lx-layout .lx-calendar-container .lx-calendar-months,
.lx .lx-layout .lx-calendar-container .lx-calendar-years,
.lx .lx-layout .lx-calendar-container .lx-calendar-quarters {
  display: flex;
  flex-direction: column;
  width: 100%;
  top: var(--space-0);
}

.lx .lx-layout .lx-calendar-container .lx-calendar-months.month-year {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
}

.lx .lx-layout .lx-calendar-container .lx-calendar-week,
.lx .lx-layout .lx-calendar-container .lx-calendar-month-row,
.lx .lx-layout .lx-calendar-container .lx-calendar-year-row,
.lx .lx-layout .lx-calendar-container .lx-calendar-quarter-row {
  display: flex;
  align-items: center;
  justify-content: center;
}

.lx .lx-layout .lx-calendar-container .lx-calendar-week,
.lx .lx-layout .lx-calendar-container .lx-calendar-quarter-row {
  margin: var(--space-0125) var(--space-0);
}

.lx .lx-layout .lx-calendar-container .lx-calendar-quarters .lx-calendar-quarter-row:first-child {
  margin-top: var(--space-0500); 
}

.lx .lx-layout .lx-calendar-container .lx-calendar-quarters .lx-calendar-quarter-row:last-child {
  margin-bottom: var(--space-0500); 
}

.lx .lx-layout .lx-calendar-container .lx-calendar-month-row {
  margin: var(--space-0500) var(--space-0);
}

.lx .lx-layout .lx-calendar-container .lx-calendar-year-row {
  margin: var(--space-0500) var(--space-0);
}

.lx .lx-layout .lx-calendar-container .lx-calendar-month-row-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.lx .lx-layout .lx-calendar-container .lx-calendar-month-wrapper,
.lx .lx-layout .lx-calendar-container .lx-calendar-year-wrapper {
  display: flex;
  justify-content: center;
  width: 5.13rem;
}

.lx .lx-layout .lx-calendar-container .lx-calendar-month-wrapper.full-layout {
  width: 100%;
}

.lx .lx-layout .lx-calendar-container .lx-calendar-quarter-inner-wrapper {
  display: flex;
  justify-content: center;
  width: 3rem;
}

.lx .lx-layout .lx-calendar-container .lx-calendar-day,
.lx .lx-layout .lx-calendar-container .lx-calendar-month,
.lx .lx-layout .lx-calendar-container .lx-calendar-year,
.lx .lx-layout .lx-calendar-container .lx-calendar-quarter {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  font-size: var(--small-font-size);
  font-weight: 500;
  line-height: 1em;
  cursor: pointer;
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: var(--color-data);
  width: 1.8rem;
  z-index: 1;
}

.lx .lx-layout .lx-calendar-container .lx-calendar-day:not(.lx-disabled-date):focus,
.lx .lx-layout .lx-calendar-container .lx-calendar-month:not(.lx-disabled-month):focus,
.lx .lx-layout .lx-calendar-container .lx-calendar-year:not(.lx-disabled-year):focus {
  border-color: transparent;
  outline: 2px solid var(--color-focus-background);
}

.lx .lx-layout .lx-calendar-container .lx-calendar-day {
  height: 1.8rem;
  position: relative;
}

.lx .lx-layout .lx-calendar-container .lx-calendar-month,
.lx .lx-layout .lx-calendar-container .lx-calendar-year {
  height: 2rem;
  width: 4rem;
  position: relative;
}

.lx .lx-layout .lx-calendar-container .lx-calendar-month.lx-full-layout,
.lx .lx-layout .lx-calendar-container .lx-calendar-year.lx-full-layout {
  width: 7rem;
}

.lx .lx-layout .lx-calendar-container .lx-calendar-quarter {
  width: 2rem;
  position: relative;
}
/* ... */

